tests/fixtures/valid/pass.py
pass  # Check 1

pass  # Check 2

"""
Lorem ipsum dolor sit amet
"""
pass  # Check 3

# Lorem ipsum dolor sit amet
pass  # Check 4

if 1 == 1:  # Check 5
    pass
elif 2 == 2:
    pass
else:
    pass

for a in [1, 2]:  # Check 6
    pass
else:
    pass

while True:  # Check 7
    pass
else:
    pass

try: # Check 8
    pass
except Exception:
    pass
